@@ -1,3 +1,10 @@
+2006-01-09 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b16
+
+ * Change: "pimp my code" in lib/imageManipulation.php
+   - Use separate internal var $stripProfiles instead of override $keepProfiles
+   - Use technically correct escaping in regexp. Thanks to Pelle.
+   - Use execwrapper instead of exex_internal.
+
 2006-01-09 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b15
 
  * Fix: "Set as highlight" for subalbums were broken in 1.5.2-RC2-CVS-b6
